objects/Epic__c.object
<CustomObject>
    <fields>
        <fullName>Epic_Details__c</fullName>
        <label>Epic Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Epic_Title__c</fullName>
        <label>Epic Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Epic</label>
    <nameField>
        <displayFormat>E{0000000}</displayFormat>
        <label>Epic Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Epics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>